# voxel-render

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENCE  README.md  compile_flags.txt  makefile
render/: Cargo.toml
render/src/: cube.rs  lib.rs
render/src/api/: chunk.rs  mod.rs
render/src/shaders/: basic.vert
src/: components.rs  main.c  main.rs  renderer.rs  systems.rs  voxel.c  voxel.h  world.rs
src/components/: mod.rs
src/renderer/: mod.rs
src/systems/: mod.rs
src/unused/: voxel.c
testing/: CMakeLists.txt  makefile
testing/src/: main.c  voxel.h
voxel-render/src/: backend.rs  lib.rs
voxel-render/src/chunk/: buffer.rs  mod.rs
voxel-render/src/shaders/: basic.frag
