[package]
name = "polyfps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { branch = "5.0.0-redesign", git = "https://github.com/TSnake41/raylib-rs" }

bevy_ecs = "0.11"
uuid = { version = "1.4", features = ["v4"] }
nalgebra = { version = "0.32", features = ["mint"] }