[package]
name = "voxel-render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { git = "https://github.com/TSnake41/glium", version = "*", default-features = false }